<resources>
    <string name="app_name">KekodFirstProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_happiness">Happiness</string>
    <string name="button_respect">Respect</string>
    <string name="button_kindness">Kindness</string>
    <string name="button_optimism">Optimism</string>
    <string name="button_giving">Giving</string>
    <string name="button_ego">Ego</string>
    <string name="tv_happiness">Happiness</string>
    <string name="tv_happiness_detail">Happiness is an emotion that enhances inner peace and life satisfaction. It often comes from spending time with loved ones, achieving success, or enjoying simple moments. Happiness depends not only on external factors but also on an internal perspective. Approaching life with positivity, living in the moment, and cultivating a sense of gratitude are keys to happiness. Though happiness holds different meanings for everyone, it is an experience that adds value to life.</string>
    <string name="tv_giving_title">Giving</string>
    <string name="tv_giving_detail">Giving is a meaningful act that deepens human relationships and strengthens social bonds. Whether through material or emotional support, helping others brings great joy and satisfaction not only to those in need but also to the giver. Giving is an expression of unconditional kindness, love, and understanding. Even small gestures, such as spending time with someone, offering support, or making a simple kind gesture, can make a significant difference in another person\'s life. Giving enhances social solidarity and brings us closer together. That\'s why every act of kindness and sharing, whether big or small, holds great value both on an individual and societal level.</string>
    <string name="tv_kindness_detail">Kindness is a powerful and transformative force that can brighten someone’s day and create a ripple effect of positivity. It is the act of being compassionate, understanding, and generous toward others, often without expecting anything in return. Kindness can take many forms, from offering a helping hand to simply listening to someone in need. It has the ability to bridge divides, heal wounds, and build strong, trusting relationships. In a world that can sometimes feel cold and indifferent, acts of kindness remind us of our shared humanity and the importance of looking out for one another. Even the smallest acts of kindness can have a profound impact, creating a more compassionate and connected world.</string>
    <string name="tv_kindness_title">Kindness</string>
    <string name="tv_optimism_title">Optimism</string>
    <string name="tv_optimism_detail">Optimism is the practice of approaching life’s challenges with a positive outlook and believing that good things will happen in the future. Optimistic people maintain their hope despite the obstacles they face and approach problems with a solution-oriented mindset. This perspective not only enhances personal happiness but also makes it easier to cope with stress. Optimism not only improves the quality of life for the individual but also inspires those around them. Even in difficult times, maintaining a positive attitude helps a person realize their potential and instills hope and courage in others. Optimism allows one to be resilient through life’s ups and downs and to see the light in every situation.</string>
    <string name="tv_respect_title">Respect</string>
    <string name="tv_respect_detail">Respect is the foundation of meaningful and harmonious relationships. It involves acknowledging and valuing the inherent worth and dignity of others, regardless of differences in opinions, backgrounds, or beliefs. Respect means listening actively, showing empathy, and treating others with kindness and fairness. It fosters trust and creates a positive environment where people feel valued and understood. By practicing respect, individuals contribute to a culture of mutual appreciation and collaboration. In both personal and professional settings, respect helps build strong connections and resolve conflicts constructively. Ultimately, respect is a key element in creating a more inclusive and supportive community.</string>
</resources>