<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_fragment_background"
    tools:context=".ui.fragment.MainFragment">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/button_happiness"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/swKindness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swKindness"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="233dp"
        android:text="@string/button_respect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/swEgo"
        app:layout_constraintStart_toStartOf="@+id/swEgo"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_kindness"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/swEgo"
        app:layout_constraintEnd_toEndOf="parent"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_optimism"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/swGiving"
        app:layout_constraintEnd_toEndOf="@+id/swHappiness"
        app:layout_constraintStart_toStartOf="@+id/swHappiness"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_giving"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/swOptimism"
        app:layout_constraintStart_toStartOf="@+id/swOptimism"
        app:layout_constraintTop_toTopOf="@+id/swRespect"
        app:thumbTint="@color/switch_thumb_tint"
        app:trackTint="@color/switch_track_tint" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_ego"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/swRespect"
        app:layout_constraintEnd_toEndOf="@+id/swKindness"
        app:layout_constraintStart_toStartOf="@+id/swKindness"
        app:thumbTint="@color/ego_switch_thumb_tint"
        app:trackTint="@color/ego_switch_track_tint" />

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ego_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>